fix: tags alignment

--- a/apps/gauzy/src/app/@shared/timesheet/edit-time-log-modal/edit-time-log-modal.component.scss
+++ b/apps/gauzy/src/app/@shared/timesheet/edit-time-log-modal/edit-time-log-modal.component.scss
@@ -32,6 +32,7 @@
 }
 
 .range-picker-row {
+  padding: 0 15px;
   .show-time {
     display: flex;
     justify-content: flex-end;
